<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context=".BookDetailsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_show_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_item_name" />

        <EditText
            android:id="@+id/et_item_name"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textColor="@color/black"
            android:hint="@string/string_input_name"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">

        <Button
            android:id="@+id/btn_item_details_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_ok" />

        <Button
            android:id="@+id/btn_item_details_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/string_cancel" />

    </LinearLayout>


</LinearLayout>