<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Task.TaskDetailActivity">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/new_task_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/DeepSkyBlue"
        app:titleTextColor="@android:color/white"
        app:navigationIcon="@drawable/go_back"
        app:title="新建任务"
        app:titleMarginStart="90dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="请选择任务类型："/>

    <RadioGroup
        android:id="@+id/rg_task_type"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/rb_daily"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="true"
            android:text="每日任务"
            android:textColor="@color/black"
            android:textSize="17sp" />
        <RadioButton
            android:id="@+id/rb_weekly"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="每周任务"
            android:textColor="@color/black"
            android:textSize="17sp" />
        <RadioButton
            android:id="@+id/rb_common"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:checked="false"
            android:text="普通任务"
            android:textColor="@color/black"
            android:textSize="17sp" />

    </RadioGroup>

    <EditText
        android:id="@+id/et_new_task_content"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textViewHeight"
        android:gravity="center_vertical"
        android:hint="@string/new_task_content"
        android:textSize="@dimen/taskContentTextSize" />

    <EditText
        android:id="@+id/et_new_task_point"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textViewHeight"
        android:gravity="center_vertical"
        android:hint="@string/new_task_point"
        android:textSize="@dimen/taskContentTextSize" />

    <EditText
        android:id="@+id/et_new_task_num"
        android:layout_width="match_parent"
        android:layout_height="@dimen/textViewHeight"
        android:gravity="center_vertical"
        android:hint="@string/new_task_num"
        android:textSize="@dimen/taskContentTextSize" />

<!--    <EditText-->
<!--        android:id="@+id/et_new_task_classification"-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="@dimen/textViewHeight"-->
<!--        android:gravity="center_vertical"-->
<!--        android:hint="@string/new_task_classification"-->
<!--        android:textSize="@dimen/taskContentTextSize" />-->

    <Spinner
        android:id="@+id/sp_new_task_classification"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:spinnerMode="dropdown" />

    <Button
        android:id="@+id/btn_new_task_confirm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="确认"/>
</LinearLayout>